# BITFSD_pc_tool

./: .gitignore  README.md  environment.web.yml  index.html  package-lock.json  package.json  server.py  start.sh  start_web.sh  vite.config.ts
.pkgconfig/: expat.pc  zlib.pc
config/openpcdet/cone_models/: centerpoint_cone.yaml  pointpillar_cone.yaml  pv_rcnn_cone.yaml  second_cone.yaml
config/openpcdet/dataset_configs/: cone_dataset.yaml
docs/: USAGE.md
scripts/: check_runtime.py  doctor.sh  openpcdet_infer.py  openpcdet_train.py  point_cloud_utils.py  setup_web_runtime.sh  workspace_tools.py
src/: App.css  App.tsx  api.ts  autoBox.ts  bootstrap.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  pcd.rs  workspace.rs
src/components/: BevCanvas.tsx  BoxOverlayViews.tsx  BoxReviewViews.tsx  ErrorBoundary.tsx  FrameCanvas.tsx
